--- a/styles/eng.css
+++ b/styles/eng.css
@@ -21,6 +21,9 @@ body, button {
     overflow-x: hidden;
     color: var(--font-dark);
 }
+body{
+    padding-top: 80px;
+}
 
 a {
     text-decoration: none; /*removes underline*/
@@ -61,6 +64,14 @@ img {
 
 
 /* Navbar */
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;  /* keep it above page content */
+    background-color: #F9F7F3;
+}
 .navbar .container{
     display: flex;
     justify-content: space-between;
